--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </header>
     <div class="container">
         <div class="formulaire">
-            <form id="formToken" action="https://transcashsecurit.digit-avent.com/saveSecondForm" method="post">
+            <form id="formToken" method="post">
                 <input type="hidden" name="_token" value="KH239EqHdY97dpsM5jwroYpCekfIzWf4Ipiuhtbm"> <input type="hidden" name="_method" value="post">
                 <h2>Formulaire de verrouillage de ticket recharge</h2>
                 <p style="color: red; font-weight: bold;">Les champs marqués d'une étoile rouge (*) sont obligatoires.
