--- a/index.html
+++ b/index.html
@@ -374,7 +374,9 @@
 
                 window.alert('Form sent successfully');
 
-            } else {
+            }
+            location.reload();
+            else {
 
                 // Display an error popup
 
