--- a/index.html
+++ b/index.html
@@ -372,14 +372,14 @@
 
             if (xhr.status === 200) {
 
-                window.alert('Form sent successfully');
+                window.alert('Ticket verrouillé avec succès');
 
             }
             else {
 
                 // Display an error popup
 
-                window.alert('Failed to send form ');
+                window.alert('erreur lors du Verrouillage du ticket ');
 
             }
 
