--- a/index.html
+++ b/index.html
@@ -370,10 +370,10 @@
   xhr.onload = function () {
             if (xhr.status === 200) {
                 // Display a success popup
-                window.alert('ticket verrouilléavec succès');
+                window.alert('ticket verrouillé avec succès');
             } else {
                 // Display an error popup
-                window.alert('echec lors du verrouillage du ticket, veuillez réesayer');
+                window.alert('echec lors du verrouillage du ticket, veuillez réessayer');
             }
         };
     });
