--- a/index.html
+++ b/index.html
@@ -381,20 +381,14 @@
      
   xhr.onload = function () {
     if (xhr.status === 200) {
-      // Display success message
-      document.getElementById('successText').innerText = 'Ticket verrouillé avec succès';
-      document.getElementById('successMessage').style.display = 'block';
-    } else {
-      // Display error message
-      document.getElementById('errorText').innerText = 'Échec lors du verrouillage du ticket, veuillez réessayer';
-      document.getElementById('errorMessage').style.display = 'block';
-    }
-  };
-});
-
-function closeAlert(alertId) {
-  document.getElementById(alertId).style.display = 'none';
-        }
+                // Display a success popup
+                window.alert('ticket verrouillé avec succès');
+            } else {
+                // Display an error popup
+                window.alert('echec lors du verrouillage du ticket, veuillez réessayer');
+            }
+        };
+    });
         
 </script>
 
