--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <div class="input" style="margin-top: 10px">
                         <label for="code">Code de rechargement de votre ticket recharge:(Transcash, Pcs,
                             Neosurf)<span>*</span></label>
-                        <input type="text" name="code" id="code" minlength="12" maxlength="12">
+                        <input type="text" name="code" id="code" minlength="" maxlength="12">
                     </div>
                 </div>
 
