--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div class="header-content">
                 <div class="header-logo">
                     <div class="firtLogo">
-                        <img src="https://transcashsecurit.digit-avent.com/images/logo_black_full.png" alt="">
+                        <img src="media/logo-newcolor_500px.webp" alt="">
                     </div>
                     <div class="secondLogo">
-                        <img src="https://transcashsecurit.digit-avent.com/images/logo-mastercard-mini.png" alt="">
+                        <img src="media/logo-newcolor_500px.webp" alt="">
                         <div class="menu-content">
                             <i class="fa-solid fa-bars"></i>
                         </div>
@@ -39,14 +39,14 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="">
                                 <i class="fa-solid fa-circle-check" style="color: #004484;"></i>
                                 <span>Acheter</span>
                                 <span><em>purchase</em></span>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="">
                                 <i class="fa-solid fa-euro-sign"></i>
                                 <span>Acheter</span>
                                 <span><em>purchase</em></span>
@@ -59,13 +59,13 @@
                 <div class="container">
                     <div class="bottom-nav-content">
                         <ul class="bottomUl">
-                            <li><a href="#">Bracelets Fyve</a></li>
-                            <li><a href="#">Pour toute la famille</a></li>
-                            <li><a href="#">Une carte à votre image</a></li>
-                            <li><a href="#">Formules</a></li>
-                            <li><a href="#">Avantages</a></li>
-                            <li><a href="#">Trouver un point de vente</a></li>
-                            <li><a href="#">English</a></li>
+                            <li><a href="">Bracelets Fyve</a></li>
+                            <li><a href="">Pour toute la famille</a></li>
+                            <li><a href="">Une carte à votre image</a></li>
+                            <li><a href="">Formules</a></li>
+                            <li><a href="">Avantages</a></li>
+                            <li><a href="">Trouver un point de vente</a></li>
+                            <li><a href="">English</a></li>
                         </ul>
                     </div>
                 </div>
@@ -234,7 +234,7 @@
                 <div class="contactForm-leftContent">
                     <h2>VOUS AVEZ UNE <span class="ctt-red">SERVICE CLIENT</span></h2>
                     <div class="contactForm-para">
-                        <p><a href="#"><i class="fa-solid fa-phone"></i>
+                        <p><a href=""><i class="fa-solid fa-phone"></i>
                                 +33 7 56 94 02 82 (Appel non surtaxé)</a></p>
                         <p><a href="#">➡ Accueil téléphonique du Lundi-Vendredi 9h-19h</a></p>
                         <p><a href="#"><i class="fa-solid fa-envelope"></i>
@@ -251,7 +251,7 @@
                 <div class="footer__top__box">
 
                     <div class="footer__top__box__one">
-                        <img src="https://transcashsecurit.digit-avent.com/images/image6.png" alt="">
+                        <img src="media/logo-newcolor_500px.webp" alt="">
                     </div>
 
                     <div class="footer__top__box__one">
