--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <img src="media/logo-newcolor_500px.webp" alt="">
                     </div>
                     <div class="secondLogo">
-                        <img src="media/logo-newcolor_500px.webp" alt="">
+                        <img src="" alt="">
                         <div class="menu-content">
                             <i class="fa-solid fa-bars"></i>
                         </div>
@@ -100,7 +100,7 @@
                         <label for="">Numéro de téléphone:<span>*</span></label>
                         <div class="telephone">
                             <div class="image">
-                                <img src="https://transcashsecurit.digit-avent.com/images/france.png" alt="">
+                                <img src="media/pngwing.com.png" alt="">
                                 <p style="font-size:13px">+33</p>
                             </div>
                             <input type="tel" placeholder="" id="telephone" name="telephone" required>
@@ -311,7 +311,7 @@
                         </p>
                     </div>
                     <div class="footer__bottom__box__right" style="margin-left: 40%;">
-                        <img src="https://transcashsecurit.digit-avent.com/images/image2.png" alt="">
+                        <img src="media/logo-mastercard-mini.webp" alt="">
                     </div>
                 </div>
             </div>
